# library

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md
.github/workflows/: lint.yml  release.yml
assets/: banner.psd  no text bi.psd  no text.psd  text bi.psd  text.psd
disbotpy/: __init__.py  __main__.py  abs.py  channel.py  client.py  embed.py  errors.py  gateway.py  http.py  mixins.py  user.py  utils.py
disbotpy/internal/: dispatcher.py
disbotpy/types/: __init__.py  activities.py  channel.py  embed.py  gateway.py  snowflake.py  thread.py  user.py
discatpy/: __init__.py  __main__.py  abs.py  asset.py  bot.py  cache.py  channel.py  client.py  embed.py  errors.py  flags.py  gateway.py  guild.py  http.py  message.py  mixins.py  object.py  user.py  utils.py
discatpy/core/: __init__.py  client.py  dispatcher.py  enums.py  errors.py  file.py  flags.py  types.py  utils.py
discatpy/core/dispatcher/: __init__.py  event.py
discatpy/core/gateway/: __init__.py  client.py  event_handler.py  ratelimiter.py  types.py
discatpy/core/gateway/events/: __init__.py  core.py  event_handler.py  event_protos.py
discatpy/core/http/: __init__.py  _client.py  client.py  ratelimiter.py  route.py
discatpy/core/http/wrapper/: __init__.py  auto_moderation.py  auto_moderation.pyi  channel.py  channel.pyi  core.py  emoji.py  emoji.pyi  guild.py  guild.pyi  guild_scheduled_event.py  guild_scheduled_event.pyi  guild_template.py  guild_template.pyi  invite.py  invite.pyi  stage_instance.py  stage_instance.pyi  sticker.py  sticker.pyi  user.py  user.pyi
discatpy/enums/: __init__.py  activity.py  channel.py  gateway.py  guild.py  message.py  user.py
discatpy/event/: __init__.py  protos.py
discatpy/internal/: __init__.py  dispatcher.py  events.py
discatpy/models/: __init__.py  abc.py  abs.py  asset.py  channel.py  color.py  command.py  embed.py  emoji.py  iterators.py  message.py  object.py  permissions.py  user.py
discatpy/types/: __init__.py  activities.py  channel.py  embed.py  gateway.py  guild.py  message.py  snowflake.py
discatpy/utils/: __init__.py  attr_exts.py  typing.py
discatpy/wrapper/: __init__.py  bot.py  utils.py
discatpy/wrapper/models/: abc.py  abs.py  asset.py  channel.py  message.py  object.py  user.py
