# Build system/Metadata (Poetry)


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "discatpy"
version = "0.1.0"
description = "A high level Discord API wrapper that does things differently."
license = "MIT"
authors = ["EmreTech <emreterzioglu49@gmail.com>"]
readme = "README.md"
repository = "https://github.com/discatpy-dev/library"
keywords = [
    "discord",
    "api",
    "discord api",
    "wrapper",
    "discord api wrapper",
    "internet",
    "networking",
    "bots",
    "discord bots",
    "discord framework",
    "high level",
    "typed",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.9"
discatcore = {git = "https://github.com/discatpy-dev/core.git"}
attrs = "^22.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/discatpy-dev/library/issues"


# Formatting


[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]


[tool.isort]
profile = "black"
py_version = 38
line_length = 100
combine_as_imports = true
filter_files = true


[tool.pyright]
strict = ["discatpy/**"]
